# mhcflow

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  tox.ini  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml  tox.yml
docker/: Dockerfile.ref  docker-compose.yml  run_mhcflow.sh
docs/: behind_the_scene.md  class_ii.md  diagram.md  disclaimer.md  getting_start.md  index.md  install.md  limitation.md  loh.md  output.md  step_by_step.md
scripts/: fisher.sh
src/mhcflow/: __init__.py  cli.py  dumper.py  fastq.py  finalizer.py  helper.py  mhc_realigner.py  mhcflow.py  realigner.py  runnable.py  strawlr.py  tag_builder.py
