[project]
name = "mhcflow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "tinyscibio>=0.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mhcflow"]

[project.scripts]
mhcflow = "mhcflow:run_mhcflow"
